# sql-preshift

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.en.md  README.md  TEST_SCENARIOS_무결성진단.md  docker-compose.yml  netlify.toml
backend/: AGENTS.md  Dockerfile  LEARNED_CAUTIONS.md  alembic.ini  pyproject.toml  run_server.py  sqlpreshift-backend.spec
backend/app/: config.py  db.py  main.py  runtime_paths.py  settings_store.py
backend/app/api/: audit.py  connection.py  llm.py  pipeline.py  schema.py
backend/app/llm/: client.py
backend/app/models/: __init__.py  audit.py  rag.py  settings.py
backend/app/pipeline/: connection_validation.py  diagnostics.py  executor.py  explain.py  input_router.py  nl2sql.py  rag.py  risk.py  schema_graph.py  simulation.py  validation.py
backend/app/schemas/: analysis.py  connection.py  schema_graph.py
backend/migrations/: env.py  seed_ecommerce.py  seed_erp.py  seed_sample.py  test_scenarios.py
backend/migrations/versions/: 0001_initial_app_meta.py  0002_schema_embeddings_vector.py
backend/tests/: test_input_router.py  test_llm_pull.py  test_m2_validation_risk.py  test_m3_diff.py  test_m4_data_dryrun.py  test_m4_dryrun.py  test_m5_executor.py  test_m6_rag_nl2sql.py  test_m7_e2e.py  test_m7_risk_explain.py  test_risk_rules.py  test_rollback_alter_column.py  test_safety_gate_bypass.py  test_schema_graph.py  test_validation.py
desktop/: AGENTS.md  LEARNED_CAUTIONS.md  main.js  package-lock.json  package.json  preload.js
frontend/: AGENTS.md  LEARNED_CAUTIONS.md  next.config.ts  package-lock.json  package.json  (+1 more)
(+86 files in other folders)
