[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sql-preshift-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlglot>=25.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.2.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
# 데스크톱 sidecar 바이너리 빌드 도구 — sqlpreshift-backend.spec로 PyInstaller 번들 생성.
# 런타임 의존성 아님(설치형 패키징 시에만 필요): uv pip install -e ".[build]"
build = [
    "pyinstaller>=6.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
